# document_intelligence-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  otel_collector_config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 002_add_role_table_direct.py  003_drop_role_column.py  12aac1861ca0_added_conversations.py  209fe096ead9_add_file_metadata.py  39a490743c16_add_refresh_tokens.py  8e928396981c_initial.py  992fc61f845c_initial_migration.py  d03366a19284_add_filename_to_conversation_messages.py  fa2e90d90ac9_user_role_changed.py
app/: database.py
app/api/routers/: __init__.py  auth.py  query.py  upload_api.py  users.py
app/core/: __init__.py  callbacks.py  celery_app.py  config.py  rate_limiter.py  security.py  telemetry.py
app/models/: __init__.py  conversation.py  file_metadata.py  user.py
app/schemas/: __init__.py  auth.py  users.py
app/scripts/: reset_chroma.py
app/services/: __init__.py  auth.py  conversation_service.py  doclingocr_service.py  embedding_service.py  ocr_service.py  rag_service.py  transcription_service.py  upload_service.py
app/utility/: __init__.py  docling_ocr.py  embedding.py  hybrid_retriever.py  ocr.py  rag.py
frontend/: .dockerignore  Dockerfile  nginx.conf  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatBox.jsx  FileUpload.jsx  Navbar.jsx
frontend/src/pages/: adminpanel.jsx  dashboard.jsx  login.jsx  register.jsx
frontend/src/services/: api.js
tests/: test_rephrase_manual.py
